<resources>
    <string name="app_name">T-907-ORIGIN</string>
    <string name="btn_mtd">方式</string>
    <string name="btn_range">范围</string>
    <string name="btn_adj">调节</string>
    <string name="btn_opt">操作</string>
    <string name="btn_file">文档</string>
    <string name="btn_setting">设置</string>
    <string name="btn_test">测试</string>
    <string name="btn_tdr">低压脉冲</string>
    <string name="btn_icm">脉冲电流</string>
    <string name="btn_sim">二次脉冲</string>
    <string name="btn_decay">DECAY</string>
    <string name="btn_500m">500m</string>
    <string name="btn_1km">1km</string>
    <string name="btn_2km">2km</string>
    <string name="btn_4km">4km</string>
    <string name="btn_8km">8km</string>
    <string name="btn_16km">16km</string>
    <string name="btn_32km">32km</string>
    <string name="btn_64km">64km</string>
    <string name="btn_gain_plus">增益+</string>
    <string name="btn_gain_minus">增益-</string>
    <string name="btn_balance_plus">平衡+</string>
    <string name="btn_balance_minus">平衡-</string>
    <string name="btn_delay_plus">延时+</string>
    <string name="btn_delay_minus">延时-</string>
    <string name="btn_vel_plus">波速+</string>
    <string name="btn_vel_minus">波速-</string>
    <string name="btn_zoom_in">放大</string>
    <string name="btn_zoom_out">缩小</string>
    <string name="btn_res">还原</string>
    <string name="btn_memory">记忆</string>
    <string name="btn_compare">比较</string>
    <string name="btn_save">存储</string>
    <string name="btn_browse">浏览</string>
    <string name="btn_display">显示</string>
    <string name="btn_search">查找</string>
    <string name="btn_dele">删除</string>
    <string name="btn_zero">光标零点</string>
    <string name="btn_lang">语言切换</string>
    <drawable name="clr_normal">#FF303F9F</drawable>
    <drawable name="clr_pressed">#9501f9</drawable>
    <string name="title_activity_base">BaseActivity</string>
    <string name="fault_distance">"距离:  "</string>
    <string name="btn_cursor">光标</string>
    <string name="tv_method">方式:</string>
    <string name="tv_gain">增益: </string>
    <string name="tv_vel">波速: </string>
    <string name="tv_range">范围:</string>
    <string name="btn_cancel">取消测试</string>
    <string name="wait_trigger">等待触发…</string>
    <string name="tv_balance">平衡:</string>
    <string name="receive_data">正在接收数据…</string>
    <string name="connecting_wifi">等待WiFi连接…</string>
    <string name="connecting_hw">等待设备连接…</string>
    <string name="You_have_no_memory_data_can_not_compare">你还没有记忆数据，无法比较</string>
    <string name="You_can_not_compare">方式或范围不同，无法比较</string>
    <string name="btn_wave_previous">波形上翻</string>
    <string name="btn_wave_next">波形下翻</string>
    <string name="tv_delay">延时:</string>
    <string name="tv_density">比例:</string>
    <string name="tv_testdate">"测试日期: "</string>
    <string name="tv_testtime">"测试时间: "</string>
    <string name="tv_testmode">"测试方式: "</string>
    <string name="tv_testrange">"测试范围: "</string>
    <string name="tv_testphase">"测试相别: "</string>
    <string name="tv_tester">测试人员:</string>
    <string name="tv_testlocation">"测试地点: "</string>
    <string name="tv_testline">"测试线路: "</string>
    <string name="btn_Confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="phaseA">A相</string>
    <string name="phaseB">B相</string>
    <string name="phaseC">C相</string>
    <string name="btn_view">查看</string>
    <string name="title_date">日期</string>
    <string name="title_time">时间</string>
    <string name="title_mode">方式</string>
    <string name="title_range">范围</string>
    <string name="oneSpace">&#160;</string>
    <string name="twoSpace">&#160;&#160;</string>
    <string name="btn_inductor_plus">电感+</string>
    <string name="btn_inductor_minus">电感-</string>
    <string name="tv_inductor">电感:</string>
    <string name="gain_too_high">增益过大</string>
    <string name="gain_too_low">增益过小</string>
    <string name="break_down">击穿！</string>
    <string name="not_break_down">不击穿！</string>
    <string name="auto_fault_distance">自动测距：</string>
    <string name="cursor_zero_set_success">光标零点设置成功！</string>
    <string name="connect_success">T-907连接成功！</string>
    <string name="communication_failed">通信失败，请检查网络后重试</string>

</resources>
