<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/adj_sidebar2"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_gain_plus2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/btn_gain_plus"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_gain_minus2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/btn_gain_minus"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_delay_plus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delay_plus"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btn_delay_minus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delay_minus"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_vel_plus2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/btn_vel_plus"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_vel_minus2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/btn_vel_minus"
            android:textColor="@android:color/black" />

    </LinearLayout>

</RelativeLayout>