<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303f9f"
    tools:context="net.kehui.www.t_907_origin.MainActivity">

    <LinearLayout
        android:id="@+id/fct_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/content"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_mtd"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/btn_mtd"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_range"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/btn_range"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_adj"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/btn_adj"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_opt"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/btn_opt"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_file"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/btn_file"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_setting"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/btn_setting"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:layout_alignParentEnd="true">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fct_bottom"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/content"
        android:background="@drawable/border"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">


            <net.kehui.www.t_907_origin.ui.SparkView.SparkView
                android:id="@+id/mainWave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/fullView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:src="@android:drawable/screen_background_dark" />

            <TextView
                android:id="@+id/hintText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_test"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/btn_test"
        android:textColor="@android:color/black" />

</RelativeLayout>
